--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,18 +10,20 @@
         <link type="text/css" rel="stylesheet" href="css/cwrc12/jquery-ui.css" />
         <link type="text/css" rel="stylesheet" href="css/prism.css" />
         <link type="text/css" rel="stylesheet" href="css/editor.css" />
-        <link type="text/css" rel="stylesheet" href="css/bootstrap/css/bootstrap.css" />
     </head>
     <body>
         <div id="cwrcWriterContainer" style="height: 100%; width: 100%;"></div>
         <script type="text/javascript" src="js/app.js"></script>
         <script type="text/javascript">
-        	var config = Drupal.CWRCWriterConfig;
-        	config.layout = Drupal.CWRCWriterLayout;
-        	config.entityLookupDialogs = Drupal.CWRCWriterDialogs;
-        	config.storageDialogs = Drupal.CWRCWriterStorageDialogs;
-        	var writer = new Drupal.CWRCWriter(config);
+        	var config = CWRCWriterConfig;
+        	config.layout = CWRCWriterLayout;
+        	config.entityLookupDialogs = CWRCWriterDialogs;
+        	config.storageDialogs = CWRCWriterStorageDialogs;
+        	var writer = new CWRCWriter(config);
         	writer.init("cwrcWriterContainer");
+        	writer.event('writerInitialized').subscribe(function() {
+        	    writer.loadDocument($.parseXML('<TEI><body><div><p>Insert text here</p></div></body></TEI>'));
+        	});
        	</script>
     </body>
 </html>
